added title and link spot to the login handlebar and created a post_listing handlebar and new_post handlebar, moved npm files to the root, out of the layouts folder

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+// this handlebar displays the blog posts from the database - to do - an each statement to get each blog post
+
 <div class="container-sm my-3">
     <div class="row p-2 border">
     <div class="col-8">
