added seed file, seed script, and each loop in the post_listing handlebar

--- a/views/post_listing.handlebars
+++ b/views/post_listing.handlebars
@@ -1,14 +1,15 @@
 //handlebars to list titles / dates of the posts
-
+{{#each blog_post}}
 <div class="container-sm my-3 d-grid gap-2">
     <button class="btn btn-primary" type="button">
     <div class="row">
     <div class="col-8">
-        This will be the title of the blog post.
+        {{title}}
     </div>
     <div class="col-4">
-        <p class="text-end">Date</p>
+        <p class="text-end">{{date}}</p>
     </div>
     </div>
     </button>
 </div>
+{{/each}}
