updated the homepage to be the blog content with title page, updated the blog listing page to be just titles

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,3 +13,26 @@
     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     </div>
 </div>
+
+
+{{#each posts}}
+<div class="border">
+  <div class="container-sm my-3 d-grid gap-2">
+    <button class="btn btn-primary" type="button">
+    <div class="row">
+    <div class="col-8">
+        <a href="/post/{{id}}">{{post_title}}The Title</a>
+    </div>
+    <div class="col-4">
+        <p class="text-end">{{post_date}}11/5</p>
+    </div>
+    </div>
+    </button>
+</div>
+<div class="container-sm my-3 d-grid gap-2">
+    <div class="row">
+        {{post_content}}     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </div>
+</div>
+</div>
+{{/each}}
