--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -39,10 +39,6 @@
 <main>
     <!-- {{{body}}} -->
 
- 
-    
-
-    
 
       
 
@@ -54,5 +50,5 @@
 
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.10/dayjs.min.js" integrity="sha512-FwNWaxyfy2XlEINoSnZh1JQ5TRRtGow0D6XcmAWmYCRgvqOUTnzCxPc9uF35u5ZEpirk1uhlPVA19tflhvnW1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
-{{!-- <script src="script.js"></script>  - update to whatever local js file we need here--}}
+<!-- {{!-- <script src="script.js"></script>  - update to whatever local js file we need here--}} -->
 </html>
