updated user_id to be added to the post model and updated relationships of models to the index

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-// this handlebar displays the blog posts from the database - to do - an each statement to get each blog post
+{{!-- // this handlebar displays the blog posts from the database - to do - an each statement to get each blog post --}}
 
 <div class="container-sm my-3">
     <div class="row p-2 border">
