--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,1 +1,40 @@
-{{title}}
+{{!-- comment handlebar -showing the title of a post with the content
+underneath and a comment box below with submit button --}}
+
+<div class="border">
+    <div class="container-sm my-3 d-grid gap-2">
+    <button class="btn btn-primary" type="button">
+    <div class="row">
+    <div class="col-8">
+        <a href="/post/{{id}}">{{post_title}}The Title</a>
+    </div>
+    <div class="col-4">
+        <p class="text-end">Posted by {{name}} on{{post_date}}11/5</p>
+    </div>
+    </div>
+    </button>
+</div>
+<div class="container-sm my-3 d-grid gap-2">
+    <div class="row">
+        {{post_content}}     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </div>
+</div>
+</div>
+
+<div class="border">
+    <div class="container-sm my-3 d-grid gap-2">
+    <div class="row">
+    
+</div>
+<div class="container-sm my-3 d-grid gap-2">
+    <div class="row">
+        <form id="addComment">
+            <div class="mb-3">
+            <label for="comment" class="form-label">Comment:</label>
+            <br><input class="form-control" type="textarea" id="comment">
+            </div>
+            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+        </form>
+    </div>
+</div>
+</div>
