--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,27 @@
-  //login handlebars (sign-up handlebars to be very similar)
-  
-    <div class="container-sm my-3">
-      <form>
-          <div class="row p-2 border">
-              <div class="col-12">
-                  Login
-              </div>
-          </div>    
-          <div class="row p-2 border">
-              <div class="col-12">    
-                  <div class="form-floating mb-3">
-                      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                      <label for="floatingInput">Email address</label>
-                  </div>
-              <div class="form-floating">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                  <label for="floatingPassword">Password</label>
-              </div>
-          </div>       
-          <button type="submit" class="btn btn-primary my-3">Login</button>       
-          <div class="my-3">
-              Sign up instead link goes here
-          </div>
-          </div>
-      </form>    
-  </div>
+{{!-- //login handlebars (sign-up handlebars to be very similar) --}}
+
+<div class="container-sm my-3">
+    <form>
+        <div class="row p-2 border">
+            <div class="col-12">
+                Log In
+            </div>
+        </div>    
+        <div class="row p-2 border">
+            <div class="col-12">    
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+            </div>
+        </div>       
+        <button type="submit" class="btn btn-primary my-3">Log In!</button>       
+        <div class="my-3">
+            Sign up instead link goes here
+        </div>
+        </div>
+    </form>    
+</div>
