added update post handlebar and added javascript to create a post, added a new model - Comments

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -38,3 +38,5 @@ underneath and a comment box below with submit button --}}
     </div>
 </div>
 </div>
+
+{{!-- // on submit - append the comment to the page and hide the form --}}
