--- a/views/show_comment.handlebars
+++ b/views/show_comment.handlebars
@@ -1,1 +1,2 @@
 {{!-- After submitting comment - display post with comment --}}
+{{!-- probably delete this view - show comment with javascript on comment handlebar --}}
