added signup javascript to the login.js and added IDs to the forms, updated cookie/session settings

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 {{!-- //login handlebars (sign-up handlebars to be very similar) --}}
 
 <div class="container-sm my-3">
-    <form>
+    <form id="login-form">
         <div class="row p-2 border">
             <div class="col-12">
                 Log In
@@ -25,3 +25,5 @@
         </div>
     </form>    
 </div>
+
+<script src="./js/login.js"></script>
