--- a/views/sign_up.handlebars
+++ b/views/sign_up.handlebars
@@ -1,7 +1,7 @@
     {{!-- sign up handlebars --}}
     
     <div class="container-sm my-3">
-        <form>
+        <form id = "signup-form">
             <div class="row p-2 border">
                 <div class="col-12">
                     Sign Up
@@ -25,3 +25,5 @@
             </div>
         </form>    
     </div>
+
+    <script src="./js/login.js"></script>
